--- a/css/main.css
+++ b/css/main.css
@@ -42,10 +42,9 @@ nav {
 
 .notification {
   opacity: 0;
-  position: absolute;
-  top: 20px;
+  position: fixed;
+  bottom: 0;
   right: 20px;
-  background-color: cyan;
   transition: opacity .5s;
 }
 
